--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/jeffbenak/Team-Profile-Generator#readme",
   "dependencies": {
     "inquirer": "^8.1.5"
+  },
+  "devDependencies": {
+    "jest": "^27.2.5"
   }
 }
